[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-carlo-option-pricer"
version = "0.1.0"
description = "Monte Carlo option pricer for European and Asian options"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy==2.3.3",
  "scipy==1.16.2",
  "pandas==2.3.2",
  "matplotlib==3.10.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mc_pricer*"]
