[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-carlo-option-pricer"
version = "0.1.0"
authors = [{name = "Chinmae Chittybabu", email = "ccchinmae@gmail.com"}]
description = "Monte Carlo option pricer for European and Asian options"
readme = "README.md"
keywords = ["option pricer", "greeks", "delta", "gamma", "Asian options", "European options", "Monte Carlo"]
requires-python = ">=3.9"
dependencies = [
  "numpy==2.3.3",
  "scipy==1.16.2",
  "pandas==2.3.2",
  "matplotlib==3.10.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mc_pricer*"]
